2.0.0.pre
* Expect Rails 3
* Switched to RSpec